tests/paczka1/small_fuzzy/92770217.err
Error in line 1: DbZOcvoH9bq A416 gg,9
Error in line 2: DbZOcvoH9bq A147 2,7
Error in line 4: S736 A147 69,8
Error in line 5: DbZOcvoH9bq S736 70,2
